Updated Visual Studio solution

--- a/visualstudio/spectre-light.vcxproj
+++ b/visualstudio/spectre-light.vcxproj
@@ -67,9 +67,11 @@
     <ClCompile Include="..\src\samplers\sampler.cpp" />
     <ClCompile Include="..\src\samplers\sampler_random.cpp" />
     <ClCompile Include="..\src\samplers\sampler_stratified.cpp" />
+    <ClCompile Include="..\src\textures\image_map.cpp" />
     <ClCompile Include="..\src\textures\texture.cpp" />
+    <ClCompile Include="..\src\textures\texture_image.cpp" />
     <ClCompile Include="..\src\textures\texture_library.cpp" />
-    <ClCompile Include="..\src\textures\uniform.cpp" />
+    <ClCompile Include="..\src\textures\texture_uniform.cpp" />
     <ClCompile Include="..\src\utility\color.cpp" />
     <ClCompile Include="..\src\utility\console.cpp" />
     <ClCompile Include="..\src\utility\file.cpp" />
@@ -133,9 +135,11 @@
     <ClInclude Include="..\src\samplers\sampler_random.hpp" />
     <ClInclude Include="..\src\samplers\sampler_stratified.hpp" />
     <ClInclude Include="..\src\settings.h" />
+    <ClInclude Include="..\src\textures\image_map.hpp" />
     <ClInclude Include="..\src\textures\texture.hpp" />
+    <ClInclude Include="..\src\textures\texture_image.hpp" />
     <ClInclude Include="..\src\textures\texture_library.hpp" />
-    <ClInclude Include="..\src\textures\uniform.hpp" />
+    <ClInclude Include="..\src\textures\texture_uniform.hpp" />
     <ClInclude Include="..\src\utility\color.hpp" />
     <ClInclude Include="..\src\utility\console.hpp" />
     <ClInclude Include="..\src\utility\file.hpp" />
