Wrapped New image IO into a single .c file
Still some linking errors, but I'm too tired to investigate them now
Also, missing documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,15 @@ PROJECT(spectre-light C CXX)
 SET(CMAKE_CXX_STANDARD 11)
 SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 IF(MSVC)
-    SET(CMAKE_CXX_FLAGS_DEBUG "/Wall /DDEBUG")
-    SET(CMAKE_CXX_FLAGS_RELEASE "/O2 /GR- /GS- /GL /Gw /Gy /MT /LTCG /w /DNDEBUG")
+    SET(CMAKE_C_FLAGS_DEBUG "/Wall /DDEBUG")
+    SET(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_C_FLAGS_DEBUG})
+    SET(CMAKE_C_FLAGS_RELEASE "/O2 /GR- /GS- /GL /Gw /Gy /MT /LTCG /w /DNDEBUG")
+    SET(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_C_FLAGS_RELEASE})
 ELSE()
-    SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -pipe -fstack-protector -g -Wall -Wextra -Wpedantic -DDEBUG")
-    SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -pipe -flto -march=native -mtune=native -funroll-loops -fno-stack-protector -DNDEBUG")
+    SET(CMAKE_C_FLAGS_DEBUG "-O0 -pipe -fstack-protector -g -Wall -Wextra -Wpedantic -DDEBUG")
+    SET(CMAKE_CXX_FLAGS_DEBUG  ${CMAKE_C_FLAGS_DEBUG})
+    SET(CMAKE_C_FLAGS_RELEASE "-Ofast -pipe -flto -march=native -mtune=native -funroll-loops -fno-stack-protector -DNDEBUG")
+    SET(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_C_FLAGS_RELEASE})
 ENDIF()
 
 FILE(GLOB spectre_core_sources
