--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
 PROJECT(spectre-light C CXX)
+SET(CMAKE_C_STANDARD 90)
 SET(CMAKE_CXX_STANDARD 11)
 SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 IF(MSVC)
@@ -64,20 +65,6 @@ TARGET_COMPILE_DEFINITIONS(spectre-full PRIVATE SPECTRAL=1)
 
 ADD_EXECUTABLE(spectre-rgb src/main.cpp ${spectre_core_sources})
 TARGET_LINK_LIBRARIES(spectre-rgb ${CMAKE_THREAD_LIBS_INIT})
-
-FIND_PACKAGE(ImageMagick COMPONENTS Magick++)
-IF(ImageMagick_Magick++_FOUND)
-    IF(ImageMagick_VERSION_STRING VERSION_LESS 7.0)
-        MESSAGE(WARNING "Magick++ version should be greater than 7.0")
-    ELSE()
-        ADD_DEFINITIONS(" -DIMAGEMAGICK=\\\"${ImageMagick_Magick++_INCLUDE_DIRS}\\\" ")
-        ADD_DEFINITIONS(" -DMAGICKCORE_QUANTUM_DEPTH=16 ")
-        ADD_DEFINITIONS(" -DMAGICKCORE_HDRI_ENABLE=1 ")
-        INCLUDE_DIRECTORIES(${ImageMagick_Magick++_INCLUDE_DIRS})
-        TARGET_LINK_LIBRARIES(spectre-full ${ImageMagick_Magick++_LIBRARY})
-        TARGET_LINK_LIBRARIES(spectre-rgb ${ImageMagick_Magick++_LIBRARY})
-    ENDIF()
-ENDIF(ImageMagick_Magick++_FOUND)
 SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 FIND_PACKAGE(GTest)
@@ -90,17 +77,11 @@ IF(GTEST_FOUND)
     TARGET_LINK_LIBRARIES(runTests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
     SET_TARGET_PROPERTIES(runTests PROPERTIES COMPILE_FLAGS " -DTESTS -DDEBUG -DTEST_ASSETS=\\\"${CMAKE_CURRENT_SOURCE_DIR}/tests/assets/\\\"")
 ENDIF(GTEST_FOUND)
-IF(ImageMagick_Magick++_FOUND AND NOT ImageMagick_VERSION_STRING VERSION_LESS 7.0)
-    TARGET_LINK_LIBRARIES(runTests ${ImageMagick_Magick++_LIBRARY})
-ENDIF(ImageMagick_Magick++_FOUND AND NOT ImageMagick_VERSION_STRING VERSION_LESS 7.0)
 FIND_PACKAGE(Gnuplot)
 IF(GNUPLOT_FOUND)
     ADD_EXECUTABLE(distributions_data EXCLUDE_FROM_ALL ${spectre_distributions_sources} ${spectre_core_sources} ${CMAKE_CURRENT_SOURCE_DIR}/tests/distributions/distributions_main.cpp)
     TARGET_COMPILE_DEFINITIONS(distributions_data PRIVATE SUPPRESS_MOTD=1)
     TARGET_LINK_LIBRARIES(distributions_data ${CMAKE_THREAD_LIBS_INIT})
-    IF(ImageMagick_Magick++_FOUND AND NOT ImageMagick_VERSION_STRING VERSION_LESS 7.0)
-        TARGET_LINK_LIBRARIES(distributions_data ${ImageMagick_Magick++_LIBRARY})
-    ENDIF(ImageMagick_Magick++_FOUND AND NOT ImageMagick_VERSION_STRING VERSION_LESS 7.0)
     ADD_CUSTOM_COMMAND(OUTPUT filters_distributions.pdf primitives_distributions.pdf samplers_distributions.pdf materials_distributions.pdf microfacets_distributions.pdf
                        DEPENDS distributions_data
                        COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/data
