JPG read and write with libjpg
Probably an error handling system should be added... I just don't want
to add setjmp and longjmp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
+# EVERY COMMENT IN THIS FILE WILL BE WRITTEN IN CAPS LOCK
 CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
 PROJECT(spectre-light C CXX)
-SET(CMAKE_C_STANDARD 90)
-SET(CMAKE_CXX_STANDARD 11)
-SET(CMAKE_CXX_STANDARD_REQUIRED ON)
+SET(CMAKE_C_STANDARD 90) #ANSI C
+SET(CMAKE_CXX_STANDARD 11) #C++11
+SET(CMAKE_CXX_STANDARD_REQUIRED ON) #ENFORCE PREVIOUS LINES
+SET(CMAKE_VERBOSE_MAKEFILE ON)
 IF(MSVC)
     SET(CMAKE_C_FLAGS_DEBUG "/Wall /DDEBUG")
     SET(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_C_FLAGS_DEBUG})
@@ -10,11 +12,12 @@ IF(MSVC)
     SET(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_C_FLAGS_RELEASE})
 ELSE()
     SET(CMAKE_C_FLAGS_DEBUG "-O0 -pipe -fstack-protector -g -Wall -Wextra -Wpedantic -DDEBUG")
-    SET(CMAKE_CXX_FLAGS_DEBUG  ${CMAKE_C_FLAGS_DEBUG})
+    SET(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_C_FLAGS_DEBUG})
     SET(CMAKE_C_FLAGS_RELEASE "-Ofast -pipe -flto -march=native -mtune=native -funroll-loops -fno-stack-protector -DNDEBUG")
     SET(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_C_FLAGS_RELEASE})
 ENDIF()
 
+#CORE FILES
 FILE(GLOB spectre_core_sources
      src/lights/*.cpp
      src/renderer.cpp
@@ -31,16 +34,22 @@ FILE(GLOB spectre_core_sources
      src/parsers/lex.yy.cc
      src/parsers/config_driver.cpp
      src/parsers/parser_obj.cpp
-     src/utility/imageio/*.c)
+     src/utility/imageio/bmp.c
+     src/utility/imageio/tga.c
+     src/utility/imageio/ppm.c
+     src/utility/imageio/imageio.c)
 FILE(GLOB spectre_test_sources
      tests/unit-testing/*.cpp
      )
 FILE(GLOB spectre_distributions_sources
      tests/distributions/*.cpp
      )
+#EVERYTHING IS INCLUDED STARTING FROM SRC
 INCLUDE_DIRECTORIES(src)
+#I NEED THREADS
 FIND_PACKAGE(Threads REQUIRED)
 
+#DOCUMENTATION
 FIND_PACKAGE(Doxygen)
 IF(DOXYGEN_FOUND)
     CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/docs/Doxyfile ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
@@ -52,21 +61,22 @@ IF(NOT WIN32)
                  COMPILE_FLAGS " -DSPECTRE_COLOURED_OUTPUT ")
 ENDIF()
 
+#YET ANOTHER CHECK TO BE SURE OF THE SYSTEM ENDIANNESS
 INCLUDE(TestBigEndian)
 TEST_BIG_ENDIAN(IS_BIG_ENDIAN)
 IF(IS_BIG_ENDIAN)
-    SET_PROPERTY(SOURCE src/utility/imageIO.cpp APPEND_STRING PROPERTY
+    SET_PROPERTY(SOURCE src/utility/imageio/imageio.c APPEND_STRING PROPERTY
                  COMPILE_FLAGS " -DIS_BIG_ENDIAN ")
 ENDIF()
 
+#CORE EXECUTABLES
 ADD_EXECUTABLE(spectre-full src/main.cpp ${spectre_core_sources})
 TARGET_LINK_LIBRARIES(spectre-full ${CMAKE_THREAD_LIBS_INIT})
 TARGET_COMPILE_DEFINITIONS(spectre-full PRIVATE SPECTRAL=1)
-
 ADD_EXECUTABLE(spectre-rgb src/main.cpp ${spectre_core_sources})
 TARGET_LINK_LIBRARIES(spectre-rgb ${CMAKE_THREAD_LIBS_INIT})
-SET(CMAKE_VERBOSE_MAKEFILE ON)
 
+#TESTING FRAMEWORK FOUND
 FIND_PACKAGE(GTest)
 IF(GTEST_FOUND)
     IF(CMAKE_BUILD_TYPE STREQUAL "Coverage")
@@ -77,6 +87,25 @@ IF(GTEST_FOUND)
     TARGET_LINK_LIBRARIES(runTests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
     SET_TARGET_PROPERTIES(runTests PROPERTIES COMPILE_FLAGS " -DTESTS -DDEBUG -DTEST_ASSETS=\\\"${CMAKE_CURRENT_SOURCE_DIR}/tests/assets/\\\"")
 ENDIF(GTEST_FOUND)
+
+#ADD SUPPORT FOR JPEG IMAGES, ALSO TO THE TESTS
+FIND_PACKAGE(JPEG)
+IF(JPEG_FOUND)
+    TARGET_SOURCES(spectre-full PUBLIC src/utility/imageio/jpg.c)
+    TARGET_SOURCES(spectre-rgb PUBLIC src/utility/imageio/jpg.c)
+    SET_PROPERTY(SOURCE src/utility/imageio/imageio.c APPEND_STRING PROPERTY
+                 COMPILE_FLAGS " -DJPEG_FOUND ")
+    TARGET_LINK_LIBRARIES(spectre-full ${JPEG_LIBRARIES})
+    TARGET_LINK_LIBRARIES(spectre-rgb ${JPEG_LIBRARIES})
+    IF(GTEST_FOUND)
+        SET_PROPERTY(SOURCE tests/unit-testing/imageio_tests.cpp APPEND_STRING
+                     PROPERTY COMPILE_FLAGS " -DJPEG_FOUND ")
+        TARGET_SOURCES(runTests PUBLIC src/utility/imageio/jpg.c)
+        TARGET_LINK_LIBRARIES(runTests ${JPEG_LIBRARIES})
+    ENDIF(GTEST_FOUND)
+ENDIF(JPEG_FOUND)
+
+#ADD TARGET TO PLOT SOME FANCY DISTRIBUTIONS
 FIND_PACKAGE(Gnuplot)
 IF(GNUPLOT_FOUND)
     ADD_EXECUTABLE(distributions_data EXCLUDE_FROM_ALL ${spectre_distributions_sources} ${spectre_core_sources} ${CMAKE_CURRENT_SOURCE_DIR}/tests/distributions/distributions_main.cpp)
