Added PNG support
and tests!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,23 @@ IF(JPEG_FOUND)
     ENDIF(GTEST_FOUND)
 ENDIF(JPEG_FOUND)
 
+#ADD SUPPORT FOR PNG IMAGES, ALSO TO THE TESTS. THIS IS COPIED FROM ABOVE
+FIND_PACKAGE(PNG)
+IF(PNG_FOUND)
+    TARGET_SOURCES(spectre-full PUBLIC src/utility/imageio/png.c)
+    TARGET_SOURCES(spectre-rgb PUBLIC src/utility/imageio/png.c)
+    SET_PROPERTY(SOURCE src/utility/imageio/imageio.c APPEND_STRING PROPERTY
+                 COMPILE_FLAGS " -DPNG_FOUND ")
+    TARGET_LINK_LIBRARIES(spectre-full ${PNG_LIBRARIES})
+    TARGET_LINK_LIBRARIES(spectre-rgb ${PNG_LIBRARIES})
+    IF(GTEST_FOUND)
+        SET_PROPERTY(SOURCE tests/unit-testing/imageio_tests.cpp APPEND_STRING
+                     PROPERTY COMPILE_FLAGS " -DPNG_FOUND ")
+        TARGET_SOURCES(runTests PUBLIC src/utility/imageio/png.c)
+        TARGET_LINK_LIBRARIES(runTests ${PNG_LIBRARIES})
+    ENDIF(GTEST_FOUND)
+ENDIF(PNG_FOUND)
+
 #ADD TARGET TO PLOT SOME FANCY DISTRIBUTIONS
 FIND_PACKAGE(Gnuplot)
 IF(GNUPLOT_FOUND)
