TIFF support with libtiff finally a good image lib
Still untested, it's 2AM and I'd probably do only damage, maybe I'll just add
some documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,23 @@ IF(PNG_FOUND)
     ENDIF(GTEST_FOUND)
 ENDIF(PNG_FOUND)
 
+#ADD SUPPORT FOR TIFF IMAGES, ALSO TO THE TESTS. THIS IS COPIED FROM ABOVE
+FIND_PACKAGE(TIFF)
+IF(TIFF_FOUND)
+    TARGET_SOURCES(spectre-full PUBLIC src/utility/imageio/tiff.c)
+    TARGET_SOURCES(spectre-rgb PUBLIC src/utility/imageio/tiff.c)
+    SET_PROPERTY(SOURCE src/utility/imageio/imageio.c APPEND_STRING PROPERTY
+                 COMPILE_FLAGS " -DTIFF_FOUND ")
+    TARGET_LINK_LIBRARIES(spectre-full ${TIFF_LIBRARIES})
+    TARGET_LINK_LIBRARIES(spectre-rgb ${TIFF_LIBRARIES})
+    IF(GTEST_FOUND)
+        SET_PROPERTY(SOURCE tests/unit-testing/imageio_tests.cpp APPEND_STRING
+                     PROPERTY COMPILE_FLAGS " -DTIFF_FOUND ")
+        TARGET_SOURCES(runTests PUBLIC src/utility/imageio/tiff.c)
+        TARGET_LINK_LIBRARIES(runTests ${TIFF_LIBRARIES})
+    ENDIF(GTEST_FOUND)
+ENDIF(TIFF_FOUND)
+
 #ADD TARGET TO PLOT SOME FANCY DISTRIBUTIONS
 FIND_PACKAGE(Gnuplot)
 IF(GNUPLOT_FOUND)
