Updated VS solution
Fixed some packing error under windows

--- a/visualstudio/spectre-light.vcxproj
+++ b/visualstudio/spectre-light.vcxproj
@@ -75,7 +75,10 @@
     <ClCompile Include="..\src\utility\color.cpp" />
     <ClCompile Include="..\src\utility\console.cpp" />
     <ClCompile Include="..\src\utility\file.cpp" />
-    <ClCompile Include="..\src\utility\imageIO.cpp" />
+    <ClCompile Include="..\src\utility\imageio\bmp.c" />
+    <ClCompile Include="..\src\utility\imageio\imageio.c" />
+    <ClCompile Include="..\src\utility\imageio\ppm.c" />
+    <ClCompile Include="..\src\utility\imageio\tga.c" />
     <ClCompile Include="..\src\utility\occlusion_tester.cpp" />
     <ClCompile Include="..\src\utility\scene.cpp" />
     <ClCompile Include="..\src\utility\spectrum.cpp" />
@@ -143,7 +146,12 @@
     <ClInclude Include="..\src\utility\color.hpp" />
     <ClInclude Include="..\src\utility\console.hpp" />
     <ClInclude Include="..\src\utility\file.hpp" />
-    <ClInclude Include="..\src\utility\imageIO.hpp" />
+    <ClInclude Include="..\src\utility\imageio\bmp.h" />
+    <ClInclude Include="..\src\utility\imageio\endianness.h" />
+    <ClInclude Include="..\src\utility\imageio\imageio.h" />
+    <ClInclude Include="..\src\utility\imageio\packed_struct.h" />
+    <ClInclude Include="..\src\utility\imageio\ppm.h" />
+    <ClInclude Include="..\src\utility\imageio\tga.h" />
     <ClInclude Include="..\src\utility\occlusion_tester.hpp" />
     <ClInclude Include="..\src\utility\scene.hpp" />
     <ClInclude Include="..\src\utility\spectrum.hpp" />
@@ -242,7 +250,7 @@
       <OpenMPSupport>false</OpenMPSupport>
       <LanguageStandard>stdcpp14</LanguageStandard>
       <AdditionalIncludeDirectories>$(SolutionDir)..\src</AdditionalIncludeDirectories>
-      <CompileAs>CompileAsCpp</CompileAs>
+      <CompileAs>Default</CompileAs>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <TreatWarningAsError>false</TreatWarningAsError>
       <StringPooling>true</StringPooling>
@@ -268,7 +276,7 @@
       <OpenMPSupport>false</OpenMPSupport>
       <LanguageStandard>stdcpp14</LanguageStandard>
       <AdditionalIncludeDirectories>$(SolutionDir)..\src</AdditionalIncludeDirectories>
-      <CompileAs>CompileAsCpp</CompileAs>
+      <CompileAs>Default</CompileAs>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <TreatWarningAsError>false</TreatWarningAsError>
       <StringPooling>true</StringPooling>
@@ -297,7 +305,7 @@
       <LanguageStandard>stdcpp14</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <BufferSecurityCheck>false</BufferSecurityCheck>
-      <CompileAs>CompileAsCpp</CompileAs>
+      <CompileAs>Default</CompileAs>
       <AdditionalIncludeDirectories>$(SolutionDir)..\src</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <FloatingPointModel>Fast</FloatingPointModel>
@@ -332,7 +340,7 @@
       <LanguageStandard>stdcpp14</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <BufferSecurityCheck>false</BufferSecurityCheck>
-      <CompileAs>CompileAsCpp</CompileAs>
+      <CompileAs>Default</CompileAs>
       <AdditionalIncludeDirectories>$(SolutionDir)..\src</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <FloatingPointModel>Fast</FloatingPointModel>
